adjusted fontsize on courses page and fixed overflowing of yt vid

--- a/src/pages/Courses.css
+++ b/src/pages/Courses.css
@@ -16,3 +16,17 @@
 .courses p {
   margin: 3px 0;
 }
+
+@media screen and (max-width: 890px) {
+  .courses {
+    padding: 3rem;
+  }
+
+  .courses h3 {
+    font-size: 1rem;
+  }
+
+  .courses p {
+    font-size: 0.9rem;
+  }
+}
