--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -182,6 +182,7 @@
     height: fit-content;
     background: var(--secondary-color);
     padding: 2rem 0;
+    overflow-x: hidden;
   }
 
   .home .showcase h1 {
@@ -273,9 +274,9 @@
   }
 
   .home .about-section .section-2 .yt-vid iframe {
-    width: 300px;
+    width: 100%;
     height: 170px;
-    margin: 2rem;
+    margin: 2rem 0;
   }
 
   .home .subscribe-form {
